# OpenOX3

./: .gitignore  .gitmodules  AGENT_BRIEFING.md  CMakeLists.txt  README.md  crtchecklist.md
cmake/: toolchain-base.cmake  toolchain.cmake
libs/: CMakeLists.txt
libs/libc/: CMakeLists.txt  mlibc-cross.ini
libs/libc/port/: syscalls.c
libs/libc/port/arch/: i386_msvc_helpers.asm
libs/libc/port/include/: newlib.h  openox_syscalls.h
libs/libc/port/types/: default_types.h
libs/libcxx/: CMakeLists.txt
libs/win32types/: CMakeLists.txt  ntdef.h  ntheaders.h  ntstatus.h  types.h  win32types.h  winerror.h
openoxkrnl/: CMakeLists.txt
openoxkrnl/export/av/: av.h
openoxkrnl/export/dbg/: dbg.h
openoxkrnl/export/dm/: dm.h
openoxkrnl/export/ex/: ex.h
openoxkrnl/export/hal/: hal.h  pci.h  pcicfg.h
openoxkrnl/export/io/: fsc.h  io.h
openoxkrnl/export/io/idex/: cdrom.h  channel.h
openoxkrnl/export/kd/: kd.h
openoxkrnl/export/ke/: bugcodes.h  ke.h  seh.h
openoxkrnl/export/krnl/: krnl.h
openoxkrnl/export/mm/: mm.h
openoxkrnl/export/nt/: nt.h
openoxkrnl/export/ob/: ob.h
openoxkrnl/export/phy/: phy.h
openoxkrnl/export/ps/: ps.h
openoxkrnl/export/rtl/: rtl.h
openoxkrnl/export/xbox/: xbox.h
openoxkrnl/export/xboxkrnl/: xboxkrnl.h
openoxkrnl/export/xc/: xc.h
openoxkrnl/export/xe/: xbe.h  xe.h
openoxkrnl/src/: main.cpp
openoxkrnl/src/util/: list.hpp  lock.hpp  section.hpp
openoxkrnl/src/xbox/: xbox.cpp  xbox.hpp
